--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -819,6 +819,25 @@ position: relative;
 
  }
 
+ .buttonarticle{
+  margin: auto;
+  display: block;
+  border: none;
+  cursor: pointer;
+  margin-top: 45px;
+  color: white !important;
+  height: 41px;
+      padding: 0 15px;
+      font-size: 17px;
+      margin-top: 2px;
+      border-radius: 33px;
+      color: #ffff;
+      outline: 0;
+      background: rgba(51,9,158,1);
+      background: -webkit-gradient(left top, right top, color-stop(0%, rgba(51,9,158,1)), color-stop(47%, rgba(51,9,158,1)), color-stop(100%, rgba(192,39,230,1)));
+      background: linear-gradient(to right, rgba(51,9,158,1) 0%, rgba(51,9,158,1) 47%, rgba(192,39,230,1) 100%);
+  }
+
  
  @media screen and (min-width: 360px) and (max-width: 539px) {}
  
