--- a/src/app/staticdata/staticdata.component.html
+++ b/src/app/staticdata/staticdata.component.html
@@ -269,13 +269,15 @@
         </div>
       </div>
 
+
+
       <div *ngIf="showstuation" class="container-fluid">
         <div class="row">
           <div class="col-md-12">
             <p class="text-center" *ngIf="getMyStuvData.length==0">No Data Available</p>
           </div>
           <div class="col-12" style="margin-top: 1em;">
-            <div class="card" style="width: 100%;" *ngFor="let stuvation of getMyStuvData">
+            <div class="card" style="width: 100%;" *ngFor="let stuvation of getMyStuvData ; let i = index;">
               <div class="card-body">
 
                 <div class="row" style="margin-top: -20px;">
@@ -296,37 +298,39 @@
                     <b>Project Status</b> : <span style="color: green; font-weight: bold"
                       *ngIf="stuvation.project_status=='completed'">{{stuvation.project_status}}</span>
                     <span style="color: #da9101; font-weight: bold" *ngIf="stuvation.project_status=='ongoing'">{{stuvation.project_status
-                     }}</span><br />
+                       }}</span><br />
                     <b>Technology</b> : {{stuvation?.technology}}
                     <br />
-                    <b>Sub-Technology</b> : {{stuvation?.sub_technology}}
-                    <div *ngIf="stuvation.project_type=='Innovation'">
-                      <br />
+                    <span> <b>Sub-Technology</b> :
+                      {{stuvation?.sub_technology}} <br /></span>
+                    <div>
+
                       <b>Idea</b> : {{stuvation?.idea}}
                       <br />
                       <b>Idea Description</b> : {{stuvation?.ideaDescription}}
 
                     </div>
-                    <br />
-                    <div *ngIf="stuvation.project_status=='ongoing'">
+                    <div>
 
-                      <b>Prototype Available ?</b> : {{stuation?.prototype_available}}
-                      <br />
-                      <b>Reference Link</b> : {{stuation?.ref_link}}
-                      <br />
-                      <b>Expected Budget</b> : {{stuation?.exp_budget}}
-                      <br />
-                      <b>Team Size</b> : {{stuation?.team_size}}<br />
-                      <b>Student Partner Last Date Of Joining</b> :
-                      <br />
-                      <div *ngIf="stuvation.project_type=='Innovation'">
-                        <b>Idea Description</b> : {{stuvation?.idea_desc}}
+                      <span><b>Prototype Available </b> :
+                        {{stuation?.prototype_available}} <br /></span>
+
+                      <span><b>Reference Link</b> : {{stuation?.ref_link}}
+                        <br /></span>
+                      <span> <b>Expected Budget</b> : {{stuation?.exp_budget}}
+                        <br /></span>
+                      <span><b>Team Size</b> : {{stuation?.team_size}}<br />
+                        <b>Student Partner Last Date Of Joining</b> :
+                        <br /></span>
+                      <div *ngIf="stuvation?.ideaDescription=='Innovation'">
+                        <span> <b>Idea Description</b> :
+                          {{stuvation?.ideaDescription}}</span>
                       </div>
 
                     </div>
                     <div style="text-align:justify">
                       <!-- *ngIf="stuvation.project_type!='Innovation'" -->
-                      <b>Abstract</b> : {{stuvation?.abstract}}
+                      <span> <b>Abstract</b> : {{stuvation?.abstract}}</span>
                     </div>
 
                   </div>
@@ -343,16 +347,7 @@
 
                     </div>
 
-                    <div class="lke-dis">
-                      <button *ngIf="!checkLoginStatus()" class="btn btn-light buttonarticle"
-                        (click)="likeStuation(stuvation.stuvation_id,stuvation.like_count,stuvation.user_id)"
-                        style="display:inline">
-                        {{stuvation.like_count}}
-                        <img src="../assets/images/thumbsUp.png" alt="Card image cap" style="height:15px;">
-                      </button>
-                      &nbsp;&nbsp;
 
-                    </div>
 
 
                   </div>
@@ -361,17 +356,27 @@
 
                     <ul *ngIf="!checkLoginStatus()" class="nav nav-pills">
 
+
+
+                      <li class="nav-item" style="margin-left:2%">
+                        <button *ngIf="!checkLoginStatus()" class="btn btn-light buttonarticle"
+                          (click)="likeStuation(stuvation.stuvation_id,stuvation.like_count,stuvation.user_id)">
+                          {{stuvation.like_count}}
+                          <img src="../assets/images/thumbsUp.png" alt="Card image cap" style="height:15px;">
+                        </button>
+                      </li>
+
+
                       <li class="nav-item">
                         <button class="nav-link btn btn-light commentbutton buttonarticle" data-toggle="modal"
                           data-target="#showStuvationDiscussionModal"
                           (click)="showstuvationComments(stuvation)">Discussions</button>
                       </li>
 
-                      <li class="nav-item" *ngIf="stuvation.project_status=='ongoing'">
-                        <button class="nav-link btn btn-light commentbutton buttonarticle" data-toggle="modal"
-                          data-target="#showJoinTeamPopupModal" (click)="showJoinTeamPopup(stuvation)">Connect
-                          &amp; Join as a Team</button>
-                      </li>
+
+
+
+
 
 
                     </ul>
@@ -379,8 +384,8 @@
 
 
 
-                </div>
 
+                </div>
 
               </div>
             </div>
