--- a/src/app/tech-article/tech-article.component.css
+++ b/src/app/tech-article/tech-article.component.css
@@ -211,7 +211,9 @@ cursor: pointer;
 }
 }
 
-
+.profilepicture{
+    border-radius: 40px;
+}
 /****************newcode**************/
 .cmnts{
     margin:4px 0px;
